bug(style): Reduced the overlap of the sticky fade pseudo element to prevent the fade being too visible when overlapping normal content

--- a/src/assets/styles/20-tools/_mixins/_sticky.scss
+++ b/src/assets/styles/20-tools/_mixins/_sticky.scss
@@ -31,13 +31,13 @@
   &:after {
     @include mq(md) {
       background: linear-gradient(180deg, var(--hack-safari-transparent-white) 0, var(--colour-white) 10%, var(--colour-white) 90%, var(--hack-safari-transparent-white) 100%);
-      bottom: -100px;
+      bottom: -80px;
       content: '';
       left: 0;
       pointer-events: none;
       position: absolute;
       right: 0;
-      top: -100px;
+      top: -80px;
       z-index: var(--z-low);
     }
   }
